src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Indicates the status of the account</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Total_Balance__c</fullName>
        <label>Total Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bus_Id__c</fullName>
        <description>3 Digit Business ID (Part of 16 Digit UBI Number)</description>
        <inlineHelpText>3 Digit Business ID (Part of 16 Digit UBI Number)
This can be found on your license document or using the license search feature at the Department of Revenue website.</inlineHelpText>
        <label>UBI Business ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Alias__c</fullName>
        <description>The account alias will be used to identify specific businesses if you manage multiple businesses with the same name.</description>
        <label>Business Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <description>Business Name</description>
        <label>Business Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Structure__c</fullName>
        <label>Business Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Foreign Corporation</fullName>
                </value>
                <value>
                    <fullName>Joint Stock Associations</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Website__c</fullName>
        <label>Business Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Certificate_Mailed_Date__c</fullName>
        <description>Certificate Mailed Date</description>
        <label>Certificate Mailed Date</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>ThirdPary_Billing_Code__c</fullName>
        <label>ThirdPary Billing Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clerk_Name__c</fullName>
        <label>Clerk Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
	    <fields>
        <fullName>Duplicate_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is flagged if DOL decides when a particular record wasn&apos;t a duplicate</description>
        <inlineHelpText>This field is flagged if DOL decides when a particular record wasn&apos;t a duplicate</inlineHelpText>
        <label>Duplicate Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType_text__c</fullName>
        <description>This field persists the value of RecordType further this field is being used in matching rule.</description>
        <inlineHelpText>This field persists the value of RecordType further this field is being used in matching rule.</inlineHelpText>
        <label>RecordType_text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be automatically checked if this is a Course Provider</description>
        <inlineHelpText>This will be automatically checked if this is a Course Provider</inlineHelpText>
        <label>Course Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Id__c</fullName>
        <externalId>true</externalId>
        <label>Client ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <label>DBA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOR_Response_Date__c</fullName>
        <description>TVS Response Date</description>
        <label>DOR Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOR_Response_Description__c</fullName>
        <formula>CASE( DOR_Response__c, 
&apos;OK&apos;, &apos;Clear wo/ DOR Issue&apos;, 
&apos;DR&apos;, &apos;Under DOR review&apos;, 
&apos;IC&apos;, &apos;In Compliance&apos;, 
&apos;CL&apos;, &apos;Cleared after Certified Delinquent&apos;, 
&apos;HO&apos;, &apos;DOR Hearing Complete&apos;, 
&apos;CD&apos;, &apos;Certified Delinquent&apos;, 
&apos;HR&apos;, &apos;DOR Hearing Requested&apos;, 
&apos;HD&apos;, &apos;DOR Hearing Complete&apos;, 
&apos;HN&apos;, &apos;DOR Hearing Not Requested&apos;, 
&apos;ID&apos;, &apos;ID not found&apos;, 
&apos;NM&apos;, &apos;Name/ID Mismatch&apos;, 
&apos;AA&apos;, &apos;Agency Informed Applicant they are Certified Delinquent&apos;, 
&apos;NC&apos;, &apos;No Case w/ DOR&apos;, 
&apos;IP&apos;, &apos;Invalid Parameters&apos;, 
&apos;XX&apos;, &apos;Unknown DOR Code&apos;, 
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOR Response Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOR_Response__c</fullName>
        <description>DOR Values for TVS Response -- for integration team</description>
        <label>DOR Response</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As_1__c</fullName>
        <description>Indicates the name they are doing business as (1)</description>
        <label>Doing Business As</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Primary_Contact__c</fullName>
        <description>Primary Contact Email</description>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Establishment_Name__c</fullName>
        <label>Establishment Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEIN_Number_Encrypted__c</fullName>
        <description>Encrypted field for FEIN Number</description>
        <inlineHelpText>FEIN Number Encrypted</inlineHelpText>
        <label>FEIN Number Encrypted</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <label>FEIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Primary_Contact__c</fullName>
        <description>Primary Contact First Name</description>
        <label>Primary Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_to_Contact_the_Course_Provider__c</fullName>
        <label>How to Contact the Course Provider?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone &amp; Extension</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issued_Number__c</fullName>
        <label>Issued Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_FEIN__c</fullName>
        <description>Showing the last four digits of FEIN</description>
        <label>Last 4 Digits of FEIN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Primary_Contact__c</fullName>
        <description>Primary Contact Last Name</description>
        <label>Primary Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record - Foreign Key used for Data Conversion</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id of the record - Foreign Key used for Data Conversion</inlineHelpText>
        <label>License ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loc_Id__c</fullName>
        <description>4 Digit Location ID (Part of 16 Digit UBI Number)</description>
        <inlineHelpText>4 Digit Location ID (Part of 16 Digit UBI Number)
This can be found on your license document or using the license search feature at the Department of Revenue website.</inlineHelpText>
        <label>UBI Location ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;)</formula>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Person_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, Apex creates an associated/equivalent contact. Allows for the ability to create Applicants who are companies</description>
        <inlineHelpText>If you want to make this company available also as a person. Eg. also having an email address and home/mobile phone numbers</inlineHelpText>
        <label>Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_License_Expiry__c</fullName>
        <label>Primary License Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Tracking_Number__c</fullName>
        <label>Primary License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Type_Name__c</fullName>
        <label>Muni Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Name__c</fullName>
        <description>Municipality Name</description>
        <label>Municipality Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Valuation__c</fullName>
        <label>Municipality Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PIN__c</fullName>
        <label>PIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Primary_Contact__c</fullName>
        <description>Primary Contact Phone</description>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Appraiser Course Provider</fullName>
                </value>
                <value>
                    <fullName>Home Inspector Course Provider</fullName>
                </value>
                <value>
                    <fullName>Real Estate School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Release 1</fullName>
                </value>
                <value>
                    <fullName>Release 2</fullName>
                </value>
                <value>
                    <fullName>Release 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sb_Lock_Date__c</fullName>
        <label>Sb Lock Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sb_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sb Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Security Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Encrypted__c</fullName>
        <description>Encrypted SSN field</description>
        <label>Social Security Number Encrypted</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Track_No__c</fullName>
        <label>Track No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Ownership__c</fullName>
        <description>DO NOT USE. This is same as &quot;Business Structure&quot; field. Account&apos;s ownership types list</description>
        <label>Type of Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Professional Association</fullName>
                </value>
                <value>
                    <fullName>Public School</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBI_Number__c</fullName>
        <inlineHelpText>The Unified Business Identifier (UBI) is issued by the Business Licensing Service (BLS) of the Department of Revenue (DOR). State or local government agencies in Washington that regulate businesses use the UBI to identify a business.</inlineHelpText>
        <label>UBI</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UBI_Status__c</fullName>
        <description>UBI Status - SoS Integration</description>
        <inlineHelpText>UBI Status - SoS Integration</inlineHelpText>
        <label>UBI Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isSoleProprietorship__c</fullName>
        <formula>!IF( ISPICKVAL(Business_Structure__c, &apos;Sole Proprietorship&apos;), True, False )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isSoleProprietorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>security_code_length__c</fullName>
        <description>to update security code- to be deleted after deployment</description>
        <formula>len(Security_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>security code length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Converted_Account2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>dadmi</value>
        </filters>
        <label>Converted Account</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Branch_License_Account</fullName>
        <active>true</active>
        <description>Branch License Account</description>
        <label>Branch License Account</label>
    </recordTypes>
	<recordTypes>
        <fullName>DOR_Business_Account</fullName>
        <active>true</active>
        <description>This record type to map data coming from DOR Interface</description>
        <label>DOR Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Business Account</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_Provider</fullName>
        <active>true</active>
        <description>Course Provider</description>
        <label>Course Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Main_License_Account</fullName>
        <active>true</active>
        <description>Main License Account</description>
        <label>Main License Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Account</fullName>
        <active>true</active>
        <description>User Account</description>
        <label>User Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>